# RayTracing

./: .gitignore  BmpWriter.cpp  BmpWriter.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Light.cpp  Light.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  ReadMe.md  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  main.cpp
